modis de code de anne + elements algo et échange  cripto pour vrai argent ajustement du style et ajout bouton échange

--- a/moneyclick-Sc-ne-animation/style/btc.css
+++ b/moneyclick-Sc-ne-animation/style/btc.css
@@ -60,3 +60,56 @@
 }
 
 
+
+#euro {
+    position: fixed;
+    top: 60px; /* Positionne en dessous de l'ID usd */
+    right: 300px; /* Aligne avec l'ID usd */
+    z-index: 999;
+    font-size: large;
+    color: rgba(11, 240, 53, 0.818);
+}
+
+#button {
+    position: fixed;
+    top: 40%; /* Remonte légèrement */
+    left: 180px; /* Décale vers la droite de 50px */
+    transform: translateY(-50%); /* Ajuste pour centrer parfaitement */
+    z-index: 1000;
+}
+
+
+#sous {
+    position: fixed;
+    top: 20px; /* Aligne avec l'ID cripto */
+    right: 300px; /* Décale davantage vers la gauche */
+    z-index: 999;
+    font-size: large;
+    color: rgba(53, 11, 240, 0.818);
+}
+
+#usd {
+    position: fixed;
+    top: 60px; /* Positionne en dessous de l'ID sous */
+    right: 300px; /* Décale davantage vers la gauche */
+    z-index: 999;
+    font-size: large;
+    color: rgba(240, 240, 11, 0.818);
+}
+
+
+
+  .gain-animation {
+    position: relative;
+    color: green;
+    font-weight: bold;
+    opacity: 0;
+    transition: all 0.8s ease-out;
+  }
+
+  .gain-animation.show {
+    opacity: 1;
+    top: -20px;
+    font-size: 18px;
+  }
+
