--- a/moneyclick-Sc-ne-animation/style/btc.css
+++ b/moneyclick-Sc-ne-animation/style/btc.css
@@ -173,3 +173,25 @@
     text-align: center;
     border-radius: 8px;
 }
+
+#giftShopModal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background-color: rgba(0,0,0,0.6);
+    justify-content: center;
+    align-items: center;
+}
+
+.gift-modal-content {
+    background-color: #fff; /* Fond blanc */
+    padding: 20px 30px;
+    border-radius: 12px;
+    width: 90%;
+    max-width: 500px;
+    text-align: center;
+    box-shadow: 0 0 20px rgba(0,0,0,0.3); /* Ombre pour le style */
+    position: relative;
+}
